# Buxter

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: drawing_playground.ipynb
samples/: README.md  bracket_description.txt
samples/miranda-rfv-2u/: README.md  params.yaml  spec.md
samples/miranda-rfv-2u/prompts/: chassis.txt  cold_plate.txt  manifold.txt
samples/miranda-rfv-2u/reference/: chassis.py  cold_plate.py  manifold.py
src/buxter/: backends.py  bootstrap.py  cli.py  config.py  exporter.py  fusion_runner.py  logging_setup.py  prompts.py  runner.py  vision.py
tests/: conftest.py  test_bootstrap.py  test_exporter.py  test_runner_smoke.py  test_vision_parse.py
